# transformer-for-quantum-phase-transition

./: ED.py  README.md  data_binning.ipynb  data_gen_xxz_s_half.py  fidelity.ipynb  gpt2.py  loss_data.csv  loss_data2.csv  new_transformers copy.ipynb  new_transformers.ipynb  pyproject.toml  test.ipynb  train.ipynb  train.py
L12_half_data/: delta_100.npy  delta_101.npy  delta_104.npy  delta_107.npy  delta_109.npy  delta_110.npy  delta_113.npy  delta_115.npy  delta_116.npy  delta_117.npy  delta_118.npy  delta_119.npy  delta_120.npy  delta_123.npy  delta_124.npy  delta_126.npy  delta_127.npy  delta_129.npy  delta_130.npy  delta_131.npy  delta_132.npy  delta_133.npy  delta_136.npy  delta_138.npy  delta_140.npy  delta_144.npy  delta_145.npy  delta_146.npy  delta_147.npy  delta_148.npy  delta_150.npy  delta_151.npy  delta_152.npy  delta_153.npy  delta_154.npy  delta_157.npy  delta_159.npy  delta_164.npy  delta_165.npy  delta_166.npy  (+364 more)
half_l12_data/: delta_102.npy  delta_103.npy  delta_105.npy  delta_106.npy  delta_108.npy  delta_111.npy  delta_112.npy  delta_114.npy  delta_121.npy  delta_122.npy  delta_125.npy  delta_128.npy  delta_134.npy  delta_135.npy  delta_137.npy  delta_139.npy  delta_141.npy  delta_142.npy  delta_143.npy  delta_149.npy  delta_155.npy  delta_156.npy  delta_158.npy  delta_160.npy  delta_161.npy  delta_162.npy  delta_163.npy  delta_167.npy  delta_168.npy  delta_169.npy  delta_170.npy  delta_174.npy  delta_176.npy  delta_177.npy  delta_179.npy  delta_180.npy  delta_183.npy  delta_188.npy  delta_189.npy  delta_191.npy  (+336 more)
loss_data/: loss_data_n1_1_final.csv  (+7 more)
(+1304 files in other folders)
